--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.7.2"
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
 pylint = "^2.15.7"
+mypy = "^0.991"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
