--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pylint = "^2.15.7"
 mypy = "^0.991"
 pytest = "^7.2.0"
 
+[tool.poetry.scripts]
+galvanize = 'galvanize:main'
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
