--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "ISC"
 [tool.poetry.dependencies]
 python = "^3.7.2"
 hidapi = "^0.12.0"
+scapy = "^2.4.5"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
