pylint, I know what I'm doing, OK?
Look ma, not even using locks!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ profile = "black"
     [tool.pylint.master]
     disable= [
         'consider-using-f-string',
+        'global-statement',
         'missing-docstring',
         ]
 
