hidapi is not a well behaving dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ profile = "black"
         'global-statement',
         'missing-docstring',
         ]
+    extension-pkg-allow-list = 'hid'
 
     output-format = 'parseable'
 
